cleaned up some views

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -22,6 +22,10 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
+.left{
+  float: left;
+}
+
 body {
   line-height: 1;
 }
