--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="container">
 	<%= render 'form' %>
-	
+	<p>&nbsp;</p>	
 	<%= link_to 'Show', @company %> |
 	<%= link_to 'Back', companies_path %>
 </div>
