--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -27,7 +27,8 @@
   </tr>
   <% end %>
 <% end %>
-<table>
+</table>
 <% if params[:search].present? %>
-<%= render :partial => "map" %>
+  <%= render :partial => "map" %>
 <% end %>
+
