--- a/app/views/individuals/index.html.erb
+++ b/app/views/individuals/index.html.erb
@@ -7,18 +7,14 @@
   <tr>
     <th>Name</th>
     <th>Total Investments</th>
-    <th>Perma</th>
-    <th>Crunch url</th>
-    <th>Home url</th>
+    <th>Number of Investments</th>
   </tr>
 
 <% @individuals.each do |individual| %>
   <tr>
     <td><%= link_to individual.name, individual %></td>
     <td><%= number_to_currency(individual.total_investments, unit: "$") %></td>
-    <td><%= individual.perma %></td>
-    <td><%= individual.crunch_url %></td>
-    <td><%= individual.home_url %></td>
+    <td><%= individual.num_of_investments %></td>
   </tr>
 <% end %>
 </table>
