--- a/app/views/layouts/charts_layout.html.erb
+++ b/app/views/layouts/charts_layout.html.erb
@@ -27,7 +27,7 @@
                 <li><%= link_to "Industries", "/industries" %></li>
                 <li><%= link_to "Investments", "/investments" %></li>
                 <li><%= link_to "Locations", "/locations" %></li>
-                <li><%= link_to "About", home_url %></li>
+                <li><%= link_to "Contact", contact_url %></li>
               </ul>
             </nav>
           </div>
