--- a/app/views/locations/_map.html.erb
+++ b/app/views/locations/_map.html.erb
@@ -1,7 +1,7 @@
 <% content_for :head do %>
     <style type="text/css">
       /*#map-canvas { height: 40%; width: 25%}*/
-      #map-canvas { height: 85%; width: 100%; max-width:960px; float: right; margin-top:30px;}
+      #map-canvas { height: 85%; width: 80%; max-width:760px; float: center; margin:30px; border: solid green;}
     </style>
 
     <script type="text/javascript"
