minor view changes

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,20 +9,20 @@
     </section>
     <section class="container group">
       <nav class="section_nav">
-        <a href="#">
+        <a href=<%=individuals_url%>>
           <img src="assets/lightning.png">
-          <h3>I am  <span class="bling">User 1</span></h3>
-          <p>Looking to find what</p>
+          <h3><span class="bling">ANGEL</span></h3>
+          <p>Listings</p>
         </a>
-        <a href="#">
+        <a href=<%=companies_url%>>
           <img src="assets/pie_chart.png">
-          <h3>I am  <span class="bling">User 2</span></h3>
-          <p>Looking to find what</p>
+          <h3><span class="bling">COMPANY</span></h3>
+          <p>Listings</p>
         </a>
-        <a href="#">
+        <a href=<%=financials_url%>>
           <img src="assets/power.png">
-          <h3>I am <span class="bling">User 3</span></h3>
-          <p>Looking to find what</p>
+          <h3><span class="bling">VC</span></h3>
+          <p>Listings</p>
         </a>
       </nav>
     </section>
